--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,10 @@ dependencies {
 
     // This dependency is used by the application.
     implementation libs.guava
+
+    //imported this later for object mapping
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
+    implementation 'org.mindrot:jbcrypt:0.4'
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
